--- a/locations.html
+++ b/locations.html
@@ -11,6 +11,11 @@
       integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//fonts.googleapis.com/css?family=Raleway"
+    />
     <title>Locations | Boujee Boba</title>
     <style>
       * {
@@ -44,9 +49,9 @@
         </nav>
       </div>
     </header>
-    <div class="title text-align: center">
+    <h1 class="title text-align: center">
       Get things poppin' at your next adventure
-    </div>
+    </h1>
     <div class="text text-align: center">
       Find our products at the most luxurious and exclusive locations. Plus,
       find us at local dives.
