--- a/about.html
+++ b/about.html
@@ -11,6 +11,11 @@
       integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//fonts.googleapis.com/css?family=Raleway"
+    />
     <title>About | Boujee Boba</title>
   </head>
   <body>
@@ -34,12 +39,12 @@
         </nav>
       </div>
     </header>
-    <div class="title text-align: center">
+    <h1 class="title text-align: center">
       Our story
-    </div>
-    <div class="text-align: center">
+    </h1>
+    <h2 class="text-align: center">
       A little bit about us
-    </div>
+    </h2>
     <div class="container bg-light">
       <div class="grid-3">
         <div>
