--- a/contact.html
+++ b/contact.html
@@ -11,26 +11,37 @@
       integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//fonts.googleapis.com/css?family=Raleway"
+    />
     <title>Contact | Boujee Boba</title>
   </head>
   <body>
-     <header class="contact">
+    <header class="contact">
       <div class="bg-div">
-         <a href="/index.html"><img class="logo-img" src="logo.png" width="60" height="60" ALIGN=CENTER></a>
+        <a href="/index.html"
+          ><img
+            class="logo-img"
+            src="logo.png"
+            width="60"
+            height="60"
+            ALIGN="CENTER"
+        /></a>
         <nav>
-        <ul>
-          <li><a  href="/index.html">Home</a></li>
-          <li><a href="/locations.html">Locations</a></li>
-          <li><a class="active" href="/contact.html">Contact Us</a></li>
-          <li><a href="/about.html">About</a></li>
-        </ul>
+          <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/locations.html">Locations</a></li>
+            <li><a class="active" href="/contact.html">Contact Us</a></li>
+            <li><a href="/about.html">About</a></li>
+          </ul>
         </nav>
       </div>
     </header>
-      <div class="title text-align: center bg-dark">
-        Wanna keep in touch? Here's how you can reach us.
-      </div>
-    </div>
+    <h1 class="title text-align: center bg-dark">
+      Wanna keep in touch? Here's how you can reach us.
+    </h1>
     <div class="boxes">
       <div>
         <span class="text-secondary">Email: </span>
@@ -39,10 +50,6 @@
       <div>
         <span class="text-secondary">Phone: </span>
         (561) 827-3060
-      </div>
-      <div>
-        <span class="text-secondary">Address: </span>
-        4250 N Alafaya Tr, Suite 212-351 Oviedo, FL 32765
       </div>
     </div>
     <section id="socials" class="bg-light">
@@ -69,10 +76,7 @@
         >
           <i class="fab fa-linkedin fa-2x"></i>
         </a>
-        <a
-          style="text-decoration: none"
-          href="mailto:boujeeboba@gmail.com"
-        >
+        <a style="text-decoration: none" href="mailto:boujeeboba@gmail.com">
           <i class="fas fa-envelope fa-2x"></i>
         </a>
       </div>
