--- a/index.html
+++ b/index.html
@@ -57,7 +57,17 @@
       </div>
       </div>
     </section>
-    <section class="Benefits bg-light">
+    <section class="Vendor bg-dark center">
+      <div class="title">
+        Reach Out, Get Involved
+      </div>
+      <a href="mailto: boujeeboba@gmail.com">
+      <div class="button">
+        Become a Vendor
+      </div>
+      </a>
+    </section>
+    <section class="Benefits bg-light" >
       <div class="container grid-4 center">
         <div>
           <img src="fruit-1.png" alt="photo-1" />
@@ -70,7 +80,7 @@
           </div>
         </div>
         <div>
-          <img src="hotel.png" alt="photo-2" />
+          <img src="marriott-2.png" alt="photo-2" />
           <div class="text">
             <h3>Exclusive Locations</h3>
             <p>
@@ -80,7 +90,7 @@
           </div>
         </div>
         <div>
-          <img src="splash.png" alt="photo-3" />
+          <img src="girl.png" alt="photo-3" />
           <div class="text">
             <h3>One Boujee Experience</h3>
             <p>
@@ -94,6 +104,32 @@
     </section>
      <footer class="center bg-dark">
       <p>Boujee Boba &copy; 2019</p>
+      <div class="icon">
+        <a
+          style="text-decoration: none"
+          href="https://www.facebook.com/boujeeboba/"
+        >
+          <i class="fab fa-facebook fa-2x"></i>
+        </a>
+        <a
+          style="text-decoration: none"
+          href="https://www.instagram.com/boujeeboba/"
+        >
+          <i class="fab fa-instagram fa-2x"></i>
+        </a>
+        <a style="text-decoration: none" href="https://twitter.com/boujee_boba">
+          <i class="fab fa-twitter fa-2x"></i>
+        </a>
+        <a
+          style="text-decoration: none"
+          href="https://www.linkedin.com/company/boujee-boba/about/"
+        >
+          <i class="fab fa-linkedin fa-2x"></i>
+        </a>
+        <a style="text-decoration: none" href="mailto:boujeeboba@gmail.com">
+          <i class="fas fa-envelope fa-2x"></i>
+        </a>
+      </div>
     </footer>
   </body>
 </html>
