--- a/contact.html
+++ b/contact.html
@@ -39,21 +39,35 @@
         </nav>
       </div>
     </header>
-    <h1 class="title text-align: center bg-dark">
-      Wanna keep in touch? Here's how you can reach us.
-    </h1>
-    <div class="boxes">
-      <div>
-        <span class="text-secondary">Email: </span>
-        boujeeboba@gmail.com
-      </div>
-      <div>
-        <span class="text-secondary">Phone: </span>
-        (561) 827-3060
-      </div>
-    </div>
-    <section id="socials" class="bg-light">
-      <p>Follow us on social media!</p>
+    <section class="bg-dark">
+      <h1 class="title text-align: center">
+        Wanna keep in touch? Here's how you can reach us.
+      </h1>
+    </section>
+    <section class="center bg-light">
+      <form>
+        Full Name: <br />
+        <input type="text" name="name" />
+        <br />
+        <br />
+        Email Address: <br />
+        <input type="text" name="email" />
+        <br />
+        <br />
+        Message: <br />
+        <textarea name="message" rows="20" cols="60"> </textarea>
+        <br />
+        <input
+          type="submit"
+          value="submit"
+          class="button"
+          onclick="alert('Thank you for sharing!')"
+        />
+      </form>
+    </section>
+
+    <footer class="center bg-dark">
+      <p>Boujee Boba &copy; 2019</p>
       <div class="icon">
         <a
           style="text-decoration: none"
@@ -80,10 +94,6 @@
           <i class="fas fa-envelope fa-2x"></i>
         </a>
       </div>
-    </section>
-
-    <footer class="center bg-dark">
-      <p>Boujee Boba &copy; 2019</p>
     </footer>
   </body>
 </html>
