--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
   <body>
     <header class="contact">
       <div class="bg-div">
-        <a href="/index.html"
+        <a href="index.html"
           ><img
             class="logo-img"
             src="logo.png"
@@ -31,10 +31,10 @@
         /></a>
         <nav>
           <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/locations.html">Locations</a></li>
-            <li><a class="active" href="/contact.html">Contact Us</a></li>
-            <li><a href="/about.html">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="locations.html">Locations</a></li>
+            <li><a class="active" href="contact.html">Contact Us</a></li>
+            <li><a href="about.html">About</a></li>
           </ul>
         </nav>
       </div>
