--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <body>
     <header class="showcase">
       <div class="bg-div">
-        <a href="/index.html"><img class="logo-img" src="logo.png" width="60" height="60" ALIGN=CENTER></a>
+        <a href="index.html"><img class="logo-img" src="logo.png" width="60" height="60" ALIGN=CENTER></a>
         <nav>
         <ul>
-          <li><a class="active" href="/index.html">Home</a></li>
-          <li><a href="/locations.html">Locations</a></li>
-          <li><a href="/contact.html">Contact Us</a></li>
-          <li><a href="/about.html">About</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="locations.html">Locations</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
         </nav>
       </div>
