--- a/locations.html
+++ b/locations.html
@@ -31,7 +31,7 @@
   <body>
     <header class="location">
       <div class="bg-div">
-        <a href="/index.html"
+        <a href="index.html"
           ><img
             class="logo-img"
             src="logo.png"
@@ -41,10 +41,10 @@
         /></a>
         <nav>
           <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a class="active" href="/locations.html">Locations</a></li>
-            <li><a href="/contact.html">Contact Us</a></li>
-            <li><a href="/about.html">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="locations.html">Locations</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="about.html">About</a></li>
           </ul>
         </nav>
       </div>
