--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         Reach Out, Get Involved
       </div>
       <a href="mailto: boujeeboba@gmail.com">
-      <div class="button">
+      <div class="vendor">
         Become a Vendor
       </div>
       </a>
